--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/logo.jpg">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/style.css">
     <title>TAEKWOND-DO ITF - INICIO</title>
 </head>
@@ -14,23 +17,38 @@
     <header>
         <!--Barra de navegacion-->
         <a href="./index.html"><img class="p4" src="./img/logo.jpg" alt="logo taekwondo itf"></a>
+        <br><br>
 
-        <nav>
-
-            <ul style="list-style: none;">
-                <li><a href="./index.html">Inicio</a></li>
-                <li><a href="./pages/historia.html">Historia</a></li>
-                <li><a href="./pages/galeria.html">Galeria</a></li>
-                <li><a href="./pages/dondeencontrarnos.html">Localización</a></li>
-                <li><a href="./pages/contacto.html">Contacto</a></li>
-            </ul>
-
-
+        <nav class="navbar navbar-expand-lg nav1">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link navtexto" href="./index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link navtexto" href="./pages/historia.html">Historia</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link navtexto" href="./pages/galeria.html">Galeria</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link navtexto" href="./pages/dondeencontrarnos.html">Localización</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link navtexto" href="./pages/contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
 
     </header>
 
-    <hr class="hrborder">
     <main class="main">
         <!--Contenido principal-->
         <div class="grid1">
@@ -56,7 +74,7 @@
 
     </main>
 
-    <hr class="hrborder">
+
     <footer>
         <!--pie de pagina-->
 
@@ -72,7 +90,10 @@
 
     </footer>
 
-
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
