--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../img/logo.jpg">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/style.css">
     <title>TAEKWON-DO ITF - GALERIA</title>
 </head>
@@ -16,22 +19,35 @@
         <!--barra de navegacion-->
         <a href="../index.html"><img class="p4" src="../img/logo.jpg" alt="logo taekwondo itf"></a>
 
-        <nav>
-
-            <ul style="list-style: none;">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="historia.html">Historia</a></li>
-                <li><a href="galeria.html">Galeria</a></li>
-                <li><a href="dondeencontrarnos.html">Localización</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-
-
+        <nav class="navbar navbar-expand-lg nav1">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link navtexto" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link navtexto" href="../pages/historia.html">Historia</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link navtexto" href="../pages/galeria.html">Galeria</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link navtexto" href="../pages/dondeencontrarnos.html">Localización</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link navtexto" href="../pages/contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
 
     </header>
-    <hr class="hrborder">
-
     <main class="main">
         <section>
             <!--Galeria de imagenes / se agregaran mas cuando avance el proyecto-->
@@ -41,21 +57,36 @@
                     class="itf"></h1><br><br>
             <hr class="hrborder"><br><br>
 
+            <section id="carouselprincipal" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="../img/suska1.jpg" class="d-block w-100 fotogaleria4" alt="suska pateando">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../img/suska2.jpg" class="d-block w-100 fotogaleria4" alt="suska pateando2">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../img/t3.jpg" class="d-block w-100 fotogaleria4" alt="pateando">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselprincipal"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselprincipal"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </section>
 
-            <div class="grid2">
-                <div class="fot1"><img class="fotogaleria4" src="../img/t1.jpg" alt="foto pateando 1"> </div>
-                <div class="fot2"><img class="fotogaleria4" src="../img/t2.jpg" alt="foto pateando 2"> </div>
-                <div class="fot3"><img class="fotogaleria4" src="../img/t3.jpg" alt="foto pateando 3"> </div>
-                <div class="fot4"><img class="fotogaleria4" src="../img/suska1.jpg" alt="foto pateando 4"> </div>
-                <div class="fot5"><img class="fotogaleria4" src="../img/suska2.jpg" alt="foto pateando 5"> </div>
-                <div class="fot6"><img class="fotogaleria1" src="../img/t5.jpg" alt="foto logo taekwondo itf"> </div>
-            </div>
             <br><br><br>
 
         </section>
 
     </main>
-    <hr class="hrborder">
+
     <footer>
         <!--pie de pagina-->
 
@@ -70,6 +101,11 @@
         <span class="footer1">Pagina no oficial Taekwon-do ITF Copyright DiegoVillegas©</span>
 
     </footer>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
